[gd_scene load_steps=24 format=3 uid="uid://0qnw1ctsgve5"]

[ext_resource type="Script" uid="uid://cj7osirfkt5vn" path="res://Scripts/placeholder_map_name.gd" id="1_epho6"]
[ext_resource type="PackedScene" uid="uid://d2xod8pb6h4qd" path="res://Scenes/Player.tscn" id="2_otn62"]
[ext_resource type="Texture2D" uid="uid://cu7dujjrykx1f" path="res://Images/Sprite_Sheet.png" id="3_3rfmu"]
[ext_resource type="Script" uid="uid://d0p2wp24ryhda" path="res://Scenes/background_generator.gd" id="3_yeids"]
[ext_resource type="Script" uid="uid://b2ebmabjr40g2" path="res://Scripts/enemy_spawner.gd" id="4_0wjqh"]
[ext_resource type="Script" uid="uid://brl0fqjxdwaa0" path="res://Scripts/UI/experience_ui.gd" id="5_u4vt4"]
[ext_resource type="Script" uid="uid://cryep8dp6jk8" path="res://Scripts/UI/health_ui.gd" id="6_yeids"]
[ext_resource type="Script" uid="uid://dtbm6eohcjvxq" path="res://Scripts/UI/game_timer_ui.gd" id="7_ewhqx"]
[ext_resource type="PackedScene" uid="uid://dpf138ogcjcgu" path="res://Scenes/UI/Upgrade_Button.tscn" id="8_0wjqh"]
[ext_resource type="PackedScene" uid="uid://ci2ybwitvo86x" path="res://Scenes/UI/Upgrade_Panel.tscn" id="8_otn62"]
[ext_resource type="Script" uid="uid://cjtl2srqi33m4" path="res://Scripts/UI/upgrade_ui.gd" id="8_u4vt4"]
[ext_resource type="PackedScene" uid="uid://bulaad0w6s08k" path="res://Scenes/UI/Confirm_Button.tscn" id="9_3rfmu"]
[ext_resource type="Script" uid="uid://c0b33ltpf1yb" path="res://Scripts/UI/fps_meter.gd" id="9_ewhqx"]
[ext_resource type="Script" uid="uid://426roaty0inm" path="res://Scripts/UI/tile_position.gd" id="10_cui7q"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iokn6"]
resource_name = "tilez"
texture = ExtResource("3_3rfmu")
texture_region_size = Vector2i(200, 200)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0

[sub_resource type="TileSet" id="TileSet_61w0f"]
tile_size = Vector2i(200, 200)
sources/0 = SubResource("TileSetAtlasSource_iokn6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1qtq"]
bg_color = Color(0.14902, 0.168627, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpk4g"]
bg_color = Color(0, 0.6, 0.858824, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cw43m"]
font_size = 30
outline_size = 2
outline_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnn4a"]
atlas = ExtResource("3_3rfmu")
region = Rect2(200, 1400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k2rf"]
atlas = ExtResource("3_3rfmu")
region = Rect2(400, 1400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_caca8"]
atlas = ExtResource("3_3rfmu")
region = Rect2(0, 1400, 200, 200)

[sub_resource type="LabelSettings" id="LabelSettings_0mwrw"]
font_size = 32
outline_size = 8
outline_color = Color(0.352941, 0.411765, 0.533333, 1)

[node name="PlaceholderMapName" type="Node"]
script = ExtResource("1_epho6")

[node name="Player" parent="." instance=ExtResource("2_otn62")]
process_mode = 1

[node name="BackgroundGenerator" type="Node" parent="."]
script = ExtResource("3_yeids")

[node name="TileMapLayer" type="TileMapLayer" parent="BackgroundGenerator"]
z_index = -1
z_as_relative = false
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_61w0f")

[node name="GameTimer" type="Timer" parent="." groups=["GameTimer"]]
process_mode = 1
wait_time = 600.0
one_shot = true

[node name="EnemySpawner" type="Node" parent="."]
process_mode = 1
script = ExtResource("4_0wjqh")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
metadata/_edit_use_anchors_ = true

[node name="TopUI" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExperienceUI" type="MarginContainer" parent="UI/MarginContainer/TopUI"]
layout_mode = 2
script = ExtResource("5_u4vt4")

[node name="ExperienceProgressBar" type="ProgressBar" parent="UI/MarginContainer/TopUI/ExperienceUI"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_o1qtq")
theme_override_styles/fill = SubResource("StyleBoxFlat_lpk4g")
show_percentage = false

[node name="ExperienceLabel" type="Label" parent="UI/MarginContainer/TopUI/ExperienceUI"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 1"
label_settings = SubResource("LabelSettings_cw43m")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/TopUI"]
layout_mode = 2

[node name="HealthUI" type="Control" parent="UI/MarginContainer/TopUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("6_yeids")
full_heart_texture = SubResource("AtlasTexture_gnn4a")
half_heart_texture = SubResource("AtlasTexture_7k2rf")
empty_heart_texture = SubResource("AtlasTexture_caca8")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/TopUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="GameTimerUI" type="MarginContainer" parent="UI/MarginContainer/TopUI/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 15
script = ExtResource("7_ewhqx")

[node name="GameTimerUILabel" type="Label" parent="UI/MarginContainer/TopUI/HBoxContainer/VBoxContainer/GameTimerUI"]
layout_mode = 2
text = "9:59"
label_settings = SubResource("LabelSettings_0mwrw")
horizontal_alignment = 2

[node name="FPSMeter" type="Label" parent="UI/MarginContainer/TopUI/HBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("9_ewhqx")

[node name="TilePosition" type="Label" parent="UI/MarginContainer/TopUI/HBoxContainer/VBoxContainer" groups=["TilePosition"]]
layout_mode = 2
script = ExtResource("10_cui7q")

[node name="UpgradeUI" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_u4vt4")

[node name="Spacer" type="Control" parent="UI/UpgradeUI"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="UpgradeHBoxContainer" type="HBoxContainer" parent="UI/UpgradeUI"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="UpgradeButton" parent="UI/UpgradeUI/UpgradeHBoxContainer" instance=ExtResource("8_0wjqh")]
layout_mode = 2

[node name="UpgradeButton2" parent="UI/UpgradeUI/UpgradeHBoxContainer" instance=ExtResource("8_0wjqh")]
layout_mode = 2

[node name="UpgradeButton3" parent="UI/UpgradeUI/UpgradeHBoxContainer" instance=ExtResource("8_0wjqh")]
layout_mode = 2

[node name="Spacer3" type="Control" parent="UI/UpgradeUI"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="UpgradePanel" parent="UI/UpgradeUI" instance=ExtResource("8_otn62")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Spacer2" type="Control" parent="UI/UpgradeUI"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ConfirmButton" parent="UI/UpgradeUI" instance=ExtResource("9_3rfmu")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
